[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scene/Coins.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tileset/tileset.res" type="TileSet" id=3]
[ext_resource path="res://scene/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/HUD.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )
Slime = ExtResource( 2 )
playtime = 40

[node name="TileMap" type="TileMap" parent="."]
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 22, 22 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65541, 1, 0, 65546, 1, 0, 65561, 1, 0, 65562, -2147483648, 0, 65563, -2147483648, 0, 131077, 3, 0, 131078, 1, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131086, 1, 0, 131095, 1, 0, 131096, 0, 0, 131097, 0, 0, 131098, -2147483648, 0, 131099, -2147483648, 0, 131100, -2147483648, 0, 131101, -2147483648, 0, 131102, -2147483648, 0, 131103, -2147483648, 0, 196612, 1, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, -2147483648, 0, 262146, 1, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, -2147483646, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, -2147483646, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, -2147483646, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, -2147483648, 0, 327681, 1, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, -2147483646, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 2, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, -2147483648, 0, 327714, -2147483648, 0, 327715, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 1, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, -2147483648, 0, 393250, 3, 0, 458754, 1, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, -2147483646, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, -2147483646, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, -2147483648, 0, 524290, 3, 0, 524291, 1, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 2, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, -2147483646, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, -2147483648, 0, 524322, 3, 0, 589827, 1, 0, 589828, 0, 0, 589829, 0, 0, 589830, -2147483646, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 2, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, -2147483648, 0, 655362, 1, 0, 655363, 0, 0, 655364, 0, 0, 655365, 2, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, -2147483648, 0, 655394, -2147483648, 0, 720897, 1, 0, 720898, -2147483648, 0, 720899, -2147483648, 0, 720900, -2147483648, 0, 720901, -2147483648, 0, 720902, -2147483648, 0, 720903, -2147483648, 0, 720904, -2147483648, 0, 720905, -2147483648, 0, 720906, -2147483648, 0, 720907, -2147483648, 0, 720908, -2147483648, 0, 720909, -2147483648, 0, 720910, -2147483648, 0, 720911, -2147483648, 0, 720912, -2147483648, 0, 720913, -2147483648, 0, 720914, -2147483648, 0, 720915, -2147483648, 0, 720916, -2147483648, 0, 720917, -2147483648, 0, 720918, -2147483648, 0, 720919, -2147483648, 0, 720920, -2147483648, 0, 720921, -2147483648, 0, 720922, -2147483648, 0, 720923, -2147483648, 0, 720924, -2147483648, 0, 720925, -2147483648, 0, 720926, -2147483648, 0, 720927, -2147483646, 0, 720928, -2147483648, 0, 720929, -2147483648, 0, 720930, -2147483648, 0, 786433, 1, 0, 786434, -2147483648, 0, 786435, -2147483648, 0, 786436, -2147483648, 0, 786437, -2147483648, 0, 786438, -2147483648, 0, 786439, -2147483648, 0, 786440, -2147483648, 0, 786441, -2147483648, 0, 786442, -2147483648, 0, 786443, -2147483646, 0, 786444, -2147483648, 0, 786445, -2147483648, 0, 786446, -2147483648, 0, 786447, -2147483648, 0, 786448, -2147483648, 0, 786449, -2147483648, 0, 786450, -2147483648, 0, 786451, -2147483648, 0, 786452, -2147483648, 0, 786453, -2147483648, 0, 786454, -2147483648, 0, 786455, -2147483648, 0, 786456, -2147483648, 0, 786457, -2147483648, 0, 786458, -2147483648, 0, 786459, -2147483648, 0, 786460, -2147483648, 0, 786461, -2147483648, 0, 786462, -2147483648, 0, 786463, -2147483648, 0, 786464, -2147483648, 0, 786465, -2147483648, 0, 786466, -2147483648, 0, 851969, 3, 0, 851970, 3, 0, 851971, 1, 0, 851972, -2147483648, 0, 851973, -2147483648, 0, 851974, -2147483648, 0, 851975, -2147483648, 0, 851976, -2147483648, 0, 851977, -2147483648, 0, 851978, 2, 0, 851979, -2147483648, 0, 851980, -2147483648, 0, 851981, -2147483648, 0, 851982, -2147483648, 0, 851983, -2147483648, 0, 851984, -2147483648, 0, 851985, -2147483648, 0, 851986, -2147483648, 0, 851987, -2147483648, 0, 851988, -2147483648, 0, 851989, -2147483648, 0, 851990, -2147483648, 0, 851991, -2147483648, 0, 851992, -2147483648, 0, 851993, -2147483648, 0, 851994, -2147483648, 0, 851995, -2147483648, 0, 851996, -2147483648, 0, 851997, -2147483648, 0, 851998, -2147483648, 0, 851999, -2147483648, 0, 852000, -2147483648, 0, 852001, -2147483648, 0, 852002, -2147483648, 0, 852003, -2147483648, 0, 917507, 3, 0, 917508, 1, 0, 917509, -2147483648, 0, 917510, -2147483648, 0, 917511, -2147483648, 0, 917512, -2147483648, 0, 917513, -2147483648, 0, 917514, -2147483648, 0, 917515, -2147483648, 0, 917516, -2147483648, 0, 917517, -2147483648, 0, 917518, -2147483648, 0, 917519, -2147483648, 0, 917520, -2147483648, 0, 917521, -2147483648, 0, 917522, -2147483648, 0, 917523, -2147483648, 0, 917524, -2147483648, 0, 917525, -2147483648, 0, 917526, -2147483648, 0, 917527, -2147483648, 0, 917528, -2147483648, 0, 917529, -2147483648, 0, 917530, -2147483648, 0, 917531, -2147483648, 0, 917532, -2147483648, 0, 917533, -2147483648, 0, 917534, -2147483648, 0, 917535, -2147483648, 0, 917536, -2147483648, 0, 917537, -2147483648, 0, 917538, -2147483648, 0, 917539, 3, 0, 983042, 1, 0, 983044, 3, 0, 983045, 1, 0, 983046, -2147483648, 0, 983047, -2147483648, 0, 983048, -2147483648, 0, 983049, -2147483648, 0, 983050, -2147483648, 0, 983051, -2147483648, 0, 983052, -2147483648, 0, 983053, -2147483648, 0, 983054, -2147483648, 0, 983055, -2147483648, 0, 983056, -2147483648, 0, 983057, -2147483648, 0, 983058, -2147483648, 0, 983059, -2147483648, 0, 983060, -2147483648, 0, 983061, -2147483648, 0, 983062, -2147483648, 0, 983063, -2147483648, 0, 983064, -2147483648, 0, 983065, -2147483648, 0, 983066, -2147483648, 0, 983067, -2147483648, 0, 983068, -2147483648, 0, 983069, -2147483648, 0, 983070, -2147483648, 0, 983071, -2147483648, 0, 983072, -2147483648, 0, 983073, -2147483648, 0, 983074, 3, 0, 1048578, 1, 0, 1048579, -2147483648, 0, 1048580, -2147483648, 0, 1048581, -2147483648, 0, 1048582, -2147483648, 0, 1048583, -2147483648, 0, 1048584, -2147483648, 0, 1048585, -2147483648, 0, 1048586, -2147483648, 0, 1048587, -2147483648, 0, 1048588, -2147483648, 0, 1048589, -2147483648, 0, 1048590, -2147483648, 0, 1048591, -2147483646, 0, 1048592, -2147483648, 0, 1048593, -2147483648, 0, 1048594, -2147483648, 0, 1048595, -2147483648, 0, 1048596, -2147483648, 0, 1048597, -2147483648, 0, 1048598, -2147483648, 0, 1048599, -2147483646, 0, 1048600, -2147483648, 0, 1048601, -2147483648, 0, 1048602, -2147483648, 0, 1048603, -2147483648, 0, 1048604, -2147483648, 0, 1048605, -2147483648, 0, 1048606, -2147483648, 0, 1048607, -2147483648, 0, 1048608, -2147483648, 0, 1048609, 3, 0, 1114113, 1, 0, 1114114, -2147483648, 0, 1114115, -2147483648, 0, 1114116, -2147483646, 0, 1114117, -2147483648, 0, 1114118, -2147483648, 0, 1114119, -2147483648, 0, 1114120, -2147483648, 0, 1114121, -2147483648, 0, 1114122, -2147483648, 0, 1114123, -2147483648, 0, 1114124, -2147483648, 0, 1114125, -2147483648, 0, 1114126, -2147483648, 0, 1114127, -2147483648, 0, 1114128, -2147483646, 0, 1114129, -2147483648, 0, 1114130, -2147483648, 0, 1114131, -2147483648, 0, 1114132, -2147483648, 0, 1114133, -2147483648, 0, 1114134, 2, 0, 1114135, -2147483648, 0, 1114136, -2147483648, 0, 1114137, -2147483648, 0, 1114138, -2147483648, 0, 1114139, -2147483648, 0, 1114140, -2147483648, 0, 1114141, -2147483648, 0, 1114142, -2147483648, 0, 1114143, -2147483648, 0, 1114144, 3, 0, 1114146, -2147483648, 0, 1179649, 3, 0, 1179650, 1, 0, 1179651, -2147483648, 0, 1179652, -2147483648, 0, 1179653, -2147483648, 0, 1179654, -2147483648, 0, 1179655, -2147483648, 0, 1179656, -2147483648, 0, 1179657, -2147483648, 0, 1179658, -2147483648, 0, 1179659, -2147483648, 0, 1179660, -2147483648, 0, 1179661, -2147483648, 0, 1179662, -2147483648, 0, 1179663, -2147483648, 0, 1179664, -2147483648, 0, 1179665, -2147483648, 0, 1179666, -2147483648, 0, 1179667, -2147483648, 0, 1179668, -2147483648, 0, 1179669, -2147483648, 0, 1179670, -2147483648, 0, 1179671, -2147483648, 0, 1179672, -2147483648, 0, 1179673, -2147483648, 0, 1179674, -2147483648, 0, 1179675, -2147483648, 0, 1179676, -2147483648, 0, 1179677, -2147483648, 0, 1179678, -2147483648, 0, 1179679, -2147483648, 0, 1179680, -2147483648, 0, 1179681, -2147483648, 0, 1179682, 3, 0, 1245186, 3, 0, 1245187, 1, 0, 1245188, -2147483648, 0, 1245189, -2147483648, 0, 1245190, -2147483648, 0, 1245191, -2147483648, 0, 1245192, -2147483648, 0, 1245193, -2147483648, 0, 1245194, -2147483648, 0, 1245195, -2147483648, 0, 1245196, -2147483648, 0, 1245197, -2147483648, 0, 1245198, -2147483648, 0, 1245199, -2147483648, 0, 1245200, -2147483648, 0, 1245201, -2147483648, 0, 1245202, -2147483648, 0, 1245203, -2147483648, 0, 1245204, -2147483646, 0, 1245205, -2147483648, 0, 1245206, -2147483648, 0, 1245207, -2147483648, 0, 1245208, -2147483648, 0, 1245209, -2147483648, 0, 1245210, -2147483646, 0, 1245211, -2147483648, 0, 1245212, -2147483648, 0, 1245213, -2147483648, 0, 1245214, -2147483648, 0, 1245215, -2147483648, 0, 1245216, -2147483648, 0, 1245217, -2147483648, 0, 1245218, -2147483648, 0, 1310722, 1, 0, 1310723, -2147483648, 0, 1310724, -2147483648, 0, 1310725, -2147483648, 0, 1310726, -2147483648, 0, 1310727, -2147483648, 0, 1310728, -2147483646, 0, 1310729, -2147483648, 0, 1310730, -2147483648, 0, 1310731, -2147483648, 0, 1310732, -2147483648, 0, 1310733, -2147483648, 0, 1310734, -2147483648, 0, 1310735, -2147483648, 0, 1310736, -2147483646, 0, 1310737, -2147483648, 0, 1310738, -2147483648, 0, 1310739, 2, 0, 1310740, -2147483648, 0, 1310741, -2147483648, 0, 1310742, -2147483648, 0, 1310743, -2147483648, 0, 1310744, -2147483648, 0, 1310745, 2, 0, 1310746, -2147483648, 0, 1310747, -2147483648, 0, 1310748, -2147483648, 0, 1310749, -2147483648, 0, 1310750, -2147483648, 0, 1310751, -2147483648, 0, 1310752, -2147483648, 0, 1310753, -2147483648, 0, 1310754, -2147483648, 0, 1376257, 1, 0, 1376258, -2147483648, 0, 1376259, -2147483648, 0, 1376260, -2147483648, 0, 1376261, -2147483648, 0, 1376262, -2147483648, 0, 1376263, 2, 0, 1376264, -2147483648, 0, 1376265, -2147483648, 0, 1376266, -2147483648, 0, 1376267, -2147483648, 0, 1376268, -2147483646, 0, 1376269, -2147483648, 0, 1376270, -2147483648, 0, 1376271, -2147483648, 0, 1376272, -2147483648, 0, 1376273, -2147483648, 0, 1376274, -2147483648, 0, 1376275, -2147483648, 0, 1376276, -2147483648, 0, 1376277, -2147483648, 0, 1376278, -2147483648, 0, 1376279, -2147483646, 0, 1376280, -2147483648, 0, 1376281, -2147483648, 0, 1376282, -2147483648, 0, 1376283, -2147483648, 0, 1376284, -2147483648, 0, 1376285, -2147483648, 0, 1376286, -2147483648, 0, 1376287, -2147483648, 0, 1376288, -2147483648, 0, 1376289, -2147483648, 0, 1376290, 3, 0, 1441793, 1, 0, 1441794, -2147483648, 0, 1441795, -2147483648, 0, 1441796, -2147483648, 0, 1441797, -2147483648, 0, 1441798, -2147483648, 0, 1441799, -2147483648, 0, 1441800, -2147483648, 0, 1441801, -2147483648, 0, 1441802, -2147483648, 0, 1441803, 2, 0, 1441804, -2147483648, 0, 1441805, -2147483648, 0, 1441806, -2147483648, 0, 1441807, -2147483648, 0, 1441808, -2147483648, 0, 1441809, -2147483648, 0, 1441810, -2147483648, 0, 1441811, -2147483648, 0, 1441812, -2147483648, 0, 1441813, -2147483648, 0, 1441814, 2, 0, 1441815, -2147483648, 0, 1441816, -2147483648, 0, 1441817, -2147483648, 0, 1441818, -2147483648, 0, 1441819, -2147483648, 0, 1441820, -2147483646, 0, 1441821, -2147483648, 0, 1441822, -2147483648, 0, 1441823, -2147483648, 0, 1441824, -2147483648, 0, 1441825, -2147483648, 0, 1441826, -2147483648, 0, 1507329, 3, 0, 1507330, 1, 0, 1507331, -2147483648, 0, 1507332, -2147483646, 0, 1507333, -2147483648, 0, 1507334, -2147483648, 0, 1507335, -2147483648, 0, 1507336, -2147483648, 0, 1507337, -2147483648, 0, 1507338, -2147483648, 0, 1507339, -2147483648, 0, 1507340, -2147483648, 0, 1507341, -2147483648, 0, 1507342, -2147483648, 0, 1507343, -2147483648, 0, 1507344, -2147483648, 0, 1507345, -2147483648, 0, 1507346, -2147483648, 0, 1507347, -2147483648, 0, 1507348, -2147483648, 0, 1507349, -2147483648, 0, 1507350, -2147483648, 0, 1507351, -2147483648, 0, 1507352, -2147483648, 0, 1507353, -2147483648, 0, 1507354, -2147483648, 0, 1507355, -2147483648, 0, 1507356, -2147483648, 0, 1507357, -2147483646, 0, 1507358, -2147483648, 0, 1507359, -2147483648, 0, 1507360, -2147483648, 0, 1507361, 3, 0, 1507362, 3, 0, 1572866, 3, 0, 1572867, 1, 0, 1572868, -2147483648, 0, 1572869, -2147483648, 0, 1572870, -2147483648, 0, 1572871, -2147483648, 0, 1572872, -2147483648, 0, 1572873, -2147483648, 0, 1572874, -2147483648, 0, 1572875, -2147483648, 0, 1572876, -2147483648, 0, 1572877, -2147483648, 0, 1572878, -2147483648, 0, 1572879, -2147483648, 0, 1572880, -2147483646, 0, 1572881, -2147483648, 0, 1572882, 3, 0, 1572883, 3, 0, 1572884, 1, 0, 1572885, -2147483648, 0, 1572886, -2147483648, 0, 1572887, -2147483648, 0, 1572888, -2147483648, 0, 1572889, -2147483648, 0, 1572890, -2147483648, 0, 1572891, -2147483648, 0, 1572892, -2147483648, 0, 1572893, -2147483648, 0, 1572894, -2147483648, 0, 1572895, -2147483648, 0, 1572896, 3, 0, 1638403, 3, 0, 1638404, 1, 0, 1638405, 3, 0, 1638406, 3, 0, 1638407, 1, 0, 1638408, -2147483648, 0, 1638409, -2147483648, 0, 1638410, 3, 0, 1638411, 3, 0, 1638412, 1, 0, 1638413, -2147483648, 0, 1638414, 3, 0, 1638415, 3, 0, 1638416, 3, 0, 1638417, 3, 0, 1638420, 3, 0, 1638421, 3, 0, 1638422, 3, 0, 1638423, 3, 0, 1638424, 3, 0, 1638425, 3, 0, 1638426, 3, 0, 1638427, 1, 0, 1638428, -2147483648, 0, 1638429, -2147483648, 0, 1638430, 3, 0, 1638431, 3, 0, 1638432, 1, 0, 1638433, -2147483648, 0, 1703940, 3, 0, 1703943, 3, 0, 1703944, 3, 0, 1703945, 3, 0, 1703948, 3, 0, 1703949, 3, 0, 1703963, 3, 0, 1703964, 3, 0, 1703965, 3, 0, 1703968, 3, 0, 1703969, 3, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.352941, 0.737255, 0.886275, 0.376471 )

[node name="GameTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SlimeContaner" type="Node" parent="."]

[node name="Enemy" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 227.684, 249.164 )

[node name="Player" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 685.826, 344.75 )
audio_bus_override = true

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 185, 185 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
